# tasuki

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh
.github/workflows/: release.yml
assets/: backends.tape  demo-setup.sh  hero.tape  theme.tape
docs/: CNAME  index.html
src/: cli.rs  config.rs  error.rs  main.rs  model.rs  nlp.rs  waybar.rs
src/backends/: localfile.rs  mod.rs
src/backends/obsidian/: mod.rs  parser.rs
src/tui/: app.rs  keybindings.rs  mod.rs  theme.rs  ui.rs
src/tui/views/: confirm.rs  mod.rs  quick_add.rs  task_list.rs
tests/: cli_test.rs
