[package]
name = "tasuki"
version = "0.1.0"
edition = "2021"
description = "A task aggregator for your Waybar"
authors = ["Zach Fleeman"]
license = "MIT"
repository = "https://github.com/zachfleeman/tasuki"
homepage = "https://tasuki.dev"
keywords = ["waybar", "todo", "notes", "hyprland", "productivity"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directories (for config/cache paths)
dirs = "5"
shellexpand = "3"

# Terminal detection
atty = "0.2"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# File watching for dynamic theme reloading
notify = "7"

# Directory traversal (for Obsidian vault scanning)
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
